--- a/src/scss/backend/pages/settings.scss
+++ b/src/scss/backend/pages/settings.scss
@@ -117,6 +117,7 @@
   padding: 25px;
   background-color: #fff;
   height: 100%;
+  z-index: 100;
   overflow-y: auto;
 }
 
@@ -130,6 +131,27 @@
   padding: 0;
 }
 
+.settings-nav-collapsible {
+  padding: 6px 0;
+}
+
+.settings-nav-collapsible .settings-nav-group.is-group {
+  padding: 16px 25px;
+  margin: 0;
+}
+
+.settings-nav-collapsible .settings-nav-section-header {
+  margin: 0;
+  line-height: 24px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+}
+
+.settings-nav-collapsible .settings-nav-group:not(:first-child) {
+  border-top: 1px solid #EAF0F2;
+}
+
 .settings-nav-list {
   margin-left: 25px;
   margin-bottom: 10px;
@@ -139,21 +161,30 @@
   padding: 6px 0;
 }
 
-.settings-nav-section-header-link {
+.settings-nav-section-header,
+.settings-nav-section-sub-header {
+  color: #363636;
   display: block;
   font-size: 13px;
   font-weight: 500;
   margin: 10px 0;
 }
 
-.settings-nav-section-header-link,
-.settings-nav-section-header-link:hover {
-  color: #363636;
-  text-decoration: none;
+.settings-nav-section-sub-header {
+  font-weight: initial;
+  font-size: 12px;
 }
 
-.settings-nav-section-header-link.active {
-  color: #0D94F6;
+.settings-nav-expansion-icon {
+  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.55, 0, 0, 1);
+  transition: transform 0.2s cubic-bezier(0.55, 0, 0, 1);
+  vertical-align: middle;
+}
+
+.is-expanded .settings-nav-expansion-icon {
+  -ms-transform: rotate(-180deg);
+  -webkit-transform: rotate(-180deg);
+  transform: rotate(-180deg);
 }
 
 .settings-nav-page-link {
