Added "option-list-item-help-text" class and bump version 0.1.176

--- a/src/scss/backend/components/dropdown.scss
+++ b/src/scss/backend/components/dropdown.scss
@@ -315,6 +315,13 @@ img#option-list-item-img-icon {
   top: 0;
 }
 
+.option-list-item-help-text {
+  color: #696E6F;
+  font-size: 11px;
+  white-space: normal;
+  line-height: 13px;
+}
+
 .option-list-item-disabled {
   color: #9e9e9e;
 }
