Fixed col-id and col-name and bump version 0.1.180

--- a/src/scss/admin/settings/layout.scss
+++ b/src/scss/admin/settings/layout.scss
@@ -179,11 +179,11 @@
       vertical-align: top;
       padding: 10px 0 0;
 
-      .col-id {
+      &.col-id {
         width: 5%;
       }
 
-      .col-name {
+      &.col-name {
         color: #363636;
         font-weight: 500;
         width: 30%;
