--- a/src/scss/admin/settings/layout.scss
+++ b/src/scss/admin/settings/layout.scss
@@ -255,10 +255,10 @@
     display: flex;
     justify-content: flex-end;
 
-    &[data-icons="5"] {width: 185px}
-    &[data-icons="4"] {width: 148px}
-    &[data-icons="3"] {width: 111px}
-    &[data-icons="2"] {width: 74px}
+    &[data-colspan="5"] {width: 185px}
+    &[data-colspan="4"] {width: 148px}
+    &[data-colspan="3"] {width: 111px}
+    &[data-colspan="2"] {width: 74px}
   }
 
   .settings-content-table-item-action-icon, .settings-content-table-item-drag-icon, .settings-content-table-item-icon {
@@ -349,17 +349,6 @@
   font-weight: 500;
   margin-bottom: 15px;
   display: block;
-}
-
-.settings-content-roles-width {
-  &.is-header {
-    display: flex;
-  }
-
-  span,
-  .checkbox {
-    width: 33.33333%;
-  }
 }
 
 .settings-content-dropdown-width {
