--- a/src/scss/layout/admin/navigation.scss
+++ b/src/scss/layout/admin/navigation.scss
@@ -1,313 +1,299 @@
-.navigation-main {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #fff;
-  box-shadow: 0 3px 5px 0.3px rgba(0, 0, 0, 0.24);
-  height: 48px;
-  overflow: visible;
-  visibility: hidden;
-  transition: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  z-index: 9;
-}
-
 .has-navigation .navigation-main {
   visibility: visible;
 }
 
-.navigation-main-wrapper {
-  padding-left: 30px;
-  padding-right: 30px;
-  position: relative;
-}
-
-.navigation-tier-one > .navigation-item {
-  &:hover,
-  &:focus,
-  &.is-active {
-    background-color: transparent;
-    margin: 0;
-  }
-}
-
-.navigation-has-secondary {
-  &.is-active > .navigation-item,
-  &:hover > .navigation-item,
-  &:focus > .navigation-item {
-    background-color: transparent;
-    margin: 0;
-  }
-}
-
-.navigation-item {
-  color: #616161;
-  cursor: pointer;
-  display: block;
+.navigation-main {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  position: absolute;
+  top: 0;
+  left: 0;
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
-  margin-bottom: 0;
-  padding: 20px;
-  position: relative;
+  color: #616161;
+  background-color: #fff;
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  height: 48px;
   width: 100%;
+  z-index: 10;
 
-  &:hover,
-  &:active,
-  &:focus {
-    text-decoration: none;
-  }
-
-  &.is-active {
-    background: #f5f5f5;
-    font-weight: 400;
-
-    &.navigation-item-secondary {
-      background: none;
-      font-weight: 400;
-    }
-  }
-
-  &.has-icon {
-    padding: 16px 20px;
-  }
-
-  .zmdi {
-    width: 30px;
-    font-size: 24px;
-    vertical-align: middle;
-  }
-}
-
-.navigation-tier-one {
-  float: left;
-  margin-right: 20px;
-
-  &:last-child {
-    margin-right: 0;
-  }
-
-  > .navigation-item {
+  ul {
+    margin: 0;
     padding: 0;
-    height: 48px;
-    font-weight: 400;
-    line-height: 48px;
+    list-style: none;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
 
-    &:hover,
-    &:focus {
-      color: #4285f4;
-    }
+    li {
+      line-height: 24px;
 
-    &.is-active {
-      background: transparent;
-      border-bottom: 2px solid #4a4060;
-      color: #000;
-    }
-  }
-}
+      a {
+        &:hover,
+        &:active,
+        &:focus {
+          text-decoration: none;
+        }
 
-.navigation-has-secondary {
-  position: relative;
+        .arrow {
+          position: relative;
+          display: -webkit-inline-box;
+          display: -webkit-inline-flex;
+          display: -ms-inline-flexbox;
+          display: inline-flex;
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+          -ms-flex-align: center;
+          align-items: center;
+          padding-left: 10px;
+          width: 23px;
 
-  &.is-active > .navigation-item,
-  &:hover > .navigation-item,
-  &:focus > .navigation-item {
-    color: #4285f4;
-  }
+          &:before {
+            font-size: 16px;
+            font-family: 'Material Icons Extended';
+            height: auto;
+            content: 'keyboard_arrow_right';
+            font-weight: 300;
+            text-shadow: none;
+            position: relative;
+            top: 2px;
+            -webkit-transition: all 0.12s ease;
+            transition: all 0.12s ease;
+          }
+        }
+      }
 
-  &.is-active > .navigation-item:after,
-  &:hover > .navigation-item:after,
-  &:focus > .navigation-item:after {
-    transform: rotate(180deg);
-  }
+      .sub-menu {
+        padding: 0;
+        left: 50%;
+        top: 0;
+        visibility: hidden;
+        opacity: 0;
+        min-width: calc(100% + 4px);
+        padding: 18px 25px;
+        background: #fff;
+        z-index: 1;
+        position: absolute;
+        -webkit-box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.16);
+        box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.16);
+        -webkit-transform: translate3d(15px, 0, 0);
+        transform: translate3d(15px, 0, 0);
+        -ms-transform: translate(15px, 0);
+        -webkit-transition: all 0.15s ease-in;
+        transition: all 0.15s ease-in;
 
-  &.is-active > .navigation-tier-two,
-  &:hover > .navigation-tier-two,
-  &:focus > .navigation-tier-two {
-    max-height: 1000px;
-    opacity: 1;
-    overflow: visible;
-  }
+        li a {
+          min-width: 50px;
+          width: 100%;
+          padding: 4px 0;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          display: block;
+        }
+      }
 
-  > .navigation-item:after {
-    color: #545454;
-    content: 'arrow_drop_down';
-    display: inline-block;
-    margin-top: -2px;
-    vertical-align: middle;
-  }
-}
-
-.navigation-tier-two {
-  max-height: 0;
-  opacity: 0;
-  overflow: hidden;
-  position: absolute;
-  transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1), max-height 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-  min-width: 230px;
-}
-
-.navigation-tier-two-inner {
-  background: #fff;
-  box-shadow: 0 3px 5px 0.3px rgba(0, 0, 0, 0.24), 0 1px 7px 0.14px rgba(0, 0, 0, 0.16);
-}
-
-.navigation-products-categories,
-.navigation-subnav {
-  overflow: hidden;
-  overflow-y: auto;
-  padding-bottom: 20px;
-  padding-top: 20px;
-  position: relative;
-  transition: width 0.2s ease-in-out, padding 0.2s ease-in-out;
-  width: 230px;
-  max-height: 400px;
-}
-
-.navigation-products-categories::after,
-.navigation-subnav::after {
-  background: #fff;
-  bottom: 100%;
-  box-shadow: 0 3px 5px 0.3px rgba(0, 0, 0, 0.24);
-  content: '';
-  height: 25px;
-  left: -2px;
-  position: absolute;
-  right: -2px;
-}
-
-.navigation-products-categories.nav-is-open,
-.navigation-subnav.nav-is-open {
-  padding-bottom: 110px;
-  width: 460px;
-}
-
-.navigation-category {
-  max-width: 230px;
-
-  &:hover,
-  &:focus,
-  &.is-active {
-    background-color: #f5f5f5;
-  }
-}
-
-.navigation-tier-two-inner {
-  .navigation-item {
-    color: #545454;
-    display: block;
-    font-size: 14px;
-    font-weight: 400;
-    overflow: hidden;
-    padding: 15px 25px;
-    white-space: normal;
-    width: 100%;
-
-    &:hover,
-    &:focus,
-    &.is-active {
-      background-color: #f5f5f5;
-    }
-
-    &.has-icon {
-      padding: 11px 25px;
+      &:hover > .sub-menu {
+        visibility: visible;
+        opacity: 1;
+        -webkit-transform: translate3d(34%, 0, 0);
+        transform: translate3d(34%, 0, 0);
+        -ms-transform: translate(34%, 0);
+      }
     }
   }
 
-  .navigation-products-item .navigation-item {
-    &.is-active,
-    &:hover {
-      background: #e0e0e0;
+  > ul {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+
+    > li {
+      -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+      flex: 1 0 auto;
+      display: -webkit-inline-box;
+      display: -webkit-inline-flex;
+      display: -ms-inline-flexbox;
+      display: inline-flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+      padding: 10px 0;
+      position: relative;
+
+      &:hover:not(.open) > a {
+        color: #fff;
+      }
+
+      &.is-active {
+        background: transparent;
+        border-bottom: 2px solid #4a4060;
+        color: #000;
+      }
+
+      > {
+        a {
+          padding: 0 20px;
+
+          > .arrow:before {
+            -webkit-transform: rotate(90deg);
+            -ms-transform: rotate(90deg);
+            transform: rotate(90deg);
+          }
+        }
+
+        ul {
+          display: none;
+          opacity: 0;
+          list-style: none;
+          border: 0;
+          top: -7px;
+          left: -4px;
+          min-width: calc(100% + 4px);
+          padding: 0 25px;
+          padding-top: 68px;
+          padding-bottom: 18px;
+          background: #fff;
+          z-index: 1;
+          position: absolute;
+          -webkit-box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.16);
+          box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.16);
+
+          li {
+            margin: 0 -25px;
+            padding: 5px 25px;
+
+            &.is-active,
+            &:hover {
+              background: #f5f5f5;
+            }
+
+            &.is-active > a {
+              font-weight: 500;
+            }
+          }
+        }
+      }
+
+      &.open > {
+        ul {
+          display: block;
+
+          &:before {
+            content: '';
+            position: absolute;
+            height: 1px;
+            top: 55px;
+            left: 0;
+            width: 100%;
+            background-color: rgba(0, 0, 0, 0.07);
+          }
+
+          > li {
+            -webkit-transform: translate3d(0, -10px, 0);
+            transform: translate3d(0, -10px, 0);
+            -ms-transform: translate(0, -10px);
+            opacity: 0;
+            transition: all 0.18s ease;
+            border-bottom: none;
+
+            > a {
+              min-width: 50px;
+              width: 100%;
+              padding: 4px 0;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              display: -webkit-box;
+              display: -moz-box;
+              display: -webkit-flex;
+              display: -ms-flexbox;
+              display: flex;
+              -webkit-box-pack: justify;
+              -webkit-justify-content: space-between;
+              -ms-flex-pack: justify;
+              justify-content: space-between;
+            }
+
+            &:last-child > a {
+              padding-bottom: 0;
+            }
+          }
+        }
+
+        a {
+          -webkit-transform: translate3d(0, -10px, 0);
+          transform: translate3d(0, -10px, 0);
+          -ms-transform: translate(0, -10px);
+          opacity: 0;
+          transition: all 0.18s ease !important;
+        }
+      }
+
+      &.opening > {
+        ul {
+          opacity: 1;
+
+          > li {
+            -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+            -ms-transform: translate(0, 0);
+            opacity: 1;
+          }
+        }
+
+        a {
+          position: relative;
+          z-index: 10;
+          -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+          -ms-transform: translate(0, 0);
+          opacity: 1;
+        }
+      }
+
+      &.closing > {
+        ul {
+          opacity: 0;
+
+          > li {
+            -webkit-transform: translate3d(0, -10px, 0);
+            transform: translate3d(0, -10px, 0);
+            -ms-transform: translate(0, -10px);
+            opacity: 0;
+          }
+        }
+
+        a {
+          -webkit-transform: translate3d(0, -10px, 0);
+          transform: translate3d(0, -10px, 0);
+          -ms-transform: translate(0, -10px);
+          opacity: 0;
+        }
+      }
     }
-  }
-}
 
-.navigation-products-categories {
-  -webkit-flex: 1 0 auto;
-  -ms-flex: 1 0 auto;
-  flex: 1 0 auto;
-
-  .navigation-tier-two-item {
-    padding-left: 48px;
-
-    &:before {
-      margin-left: 24px;
+    li > a {
+      color: #545454;
     }
-  }
-
-  &:first-child .products-navigation-item {
-    white-space: nowrap;
-  }
-}
-
-.navigation-category-cta {
-  &.is-active {
-    background: #f5f5f5;
-    font-weight: 500;
-  }
-
-  &::before {
-    font-family: 'Material Icons Extended';
-    text-rendering: optimizeLegibility;
-    font-feature-settings: 'liga' 1;
-    -webkit-font-feature-settings: 'liga' 1;
-    -moz-font-feature-settings: 'liga' 1;
-    -ms-font-feature-settings: 'liga' 1;
-    -o-font-feature-settings: 'liga' 1;
-    font-size: 24px;
-    font-style: normal;
-    line-height: 1;
-    text-transform: none;
-    content: 'keyboard_arrow_right';
-    font-size: 18px;
-    position: absolute;
-    right: 20px;
-  }
-}
-
-.navigation-category {
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  overflow: hidden;
-}
-
-.navigation-products {
-  background: #f5f5f5;
-  bottom: 0;
-  left: 230px;
-  overflow: hidden;
-  overflow-y: auto;
-  padding: 20px 0;
-  position: absolute;
-  top: 0;
-  transform: translateX(0);
-  transition: transform 0.5s ease;
-  visibility: hidden;
-  width: 230px;
-}
-
-.navigation-category:hover {
-  .navigation-products {
-    transform: translateX(0);
-    visibility: visible;
-  }
-
-  .navigation-products-item:hover {
-    background: #e0e0e0;
-  }
-}
-
-@media (min-width: 1025px) {
-  .navigation-tier-one {
-    margin-right: 35px;
   }
 }
