Fixed style when global navigation or scrollable-tabs defined

--- a/src/scss/layout/admin/header.scss
+++ b/src/scss/layout/admin/header.scss
@@ -9,7 +9,8 @@ header {
   z-index: 10;
 }
 
-.has-navigation header {
+.has-navigation header,
+.has-tabs header {
   box-shadow: none !important;
 }
 
