--- a/src/scss/layout/admin/content.scss
+++ b/src/scss/layout/admin/content.scss
@@ -41,7 +41,8 @@
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.25);
 }
 
-.has-navigation .body-content {
+.has-navigation .body-content,
+.has-tabs .body-content {
   padding-top: 48px;
 }
 
