--- a/src/scss/layout/admin/sidebar.scss
+++ b/src/scss/layout/admin/sidebar.scss
@@ -26,7 +26,6 @@
 
 .sidebar-toggle {
   font-size: 24px;
-  height: 100%;
   line-height: 24px;
   padding: 12px;
   text-align: center;
@@ -73,7 +72,7 @@
     transition: padding-left 0.2s;
     padding-left: 0;
     width: 100%;
-    height: 60px;
+    height: 1px;
     margin-bottom: 10px;
 
     .name {
@@ -95,6 +94,10 @@
         width: 48px;
       }
     }
+  }
+
+  .nav-drawer-icons {
+    margin-bottom: 22px;
   }
 
   .nav-options {
@@ -297,6 +300,10 @@
   .content {
     width: 280px;
     overflow-y: auto;
+  }
+
+  .nav-header {
+    height: 60px;
   }
 
   .nav-header,
