--- a/src/scss/components/card/team.scss
+++ b/src/scss/components/card/team.scss
@@ -1,16 +1,16 @@
 .card-team {
   position: relative;
   display: inline-block;
-  height: 300px;
-  width: 300px;
+  height: 225px;
+  width: 370px;
   margin-right: 10px;
-  margin-top: 20px;
+  margin-bottom: 24px;
   padding: 20px 20px 75px;
   text-align: left;
   vertical-align: top;
-  border-radius: 2px;
+  border-radius: 8px;
   background-color: #fff;
-  box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0.12), 0 1px 6px rgba(0, 0, 0, 0.12);
+  box-shadow: 10px 10px 35px 0 rgba(0, 0, 0, 0.08);
 
   .card-team-info {
     position: relative;
@@ -37,15 +37,22 @@
     }
   }
 
-  .card-team-footer {
-    padding: 5px;
-    background-color: #fff;
-    border-top: 1px solid #dce3e6;
+  .card-team-actions {
     position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    text-align: right;
+    top: 20px;
+    right: 20px;
+    z-index: 1;
+
+    a {
+      font-size: 16px;
+      font-weight: 600;
+      color: #696e6f;
+      margin-left: 16px;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
   }
 }
 
