Changed gobal add new dropdown items color

--- a/src/scss/layout/admin/drawer.scss
+++ b/src/scss/layout/admin/drawer.scss
@@ -298,6 +298,10 @@
   .drawer-content {
     top: 144px;
   }
+
+  .dropdown-global-add-new .option-list-item-text {
+    color: inherit;
+  }
 }
 
 .search-drawer {
