--- a/src/scss/layout/admin/content.scss
+++ b/src/scss/layout/admin/content.scss
@@ -37,7 +37,7 @@
   height: -webkit-calc(100% - 60px);
   height: calc(100% - 60px);
   transition: margin-left 0.3s, width 0.3s;
-  background-color: #eaf0f2;
+  background-color: #fff;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.25);
 }
 
