Reposition list-page-empty-content when page has navigation

--- a/src/scss/components/list_page.scss
+++ b/src/scss/components/list_page.scss
@@ -492,6 +492,10 @@
   }
 }
 
+.has-navigation .list-page-empty-content {
+  top: 350px;
+}
+
 .list-page-loading-popup {
   bottom: 40px;
   display: block;
