--- a/src/scss/components/entity_profile_frame/layout.scss
+++ b/src/scss/components/entity_profile_frame/layout.scss
@@ -40,8 +40,7 @@
 }
 
 .entity-profile-frame-header-action-button {
-  cursor: pointer;
-  display: inline-block;
+  left: -40px;
   font-size: 20px;
   font-weight: 400;
   line-height: 20px;
