Updated activity list style

--- a/src/scss/components/entity_activity/list.scss
+++ b/src/scss/components/entity_activity/list.scss
@@ -39,19 +39,10 @@
 .activity-item {
   -webkit-transition: margin 0.3s;
   transition: margin 0.3s;
-  background-color: #fff;
   position: relative;
   min-height: 84px;
   border-top: 1px solid #dce3e6;
-  box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0.12), 0 1px 6px rgba(0, 0, 0, 0.12);
-
-  &:first-child {
-    box-shadow: 0 -0.5px 1.5px 0 rgba(0, 0, 0, 0.12), 0 -0.5px 6px rgba(0, 0, 0, 0.12);
-  }
-
-  &:last-child {
-    box-shadow: 0 2.5px 1.5px 0 rgba(0, 0, 0, 0.12), 0 2.5px 6px rgba(0, 0, 0, 0.12);
-  }
+  padding: 0 24px 24px;
 }
 
 .activity-item-container {
@@ -60,8 +51,7 @@
 
 .activity-item-profile-section {
   flex: none;
-  width: 89px;
-  padding-right: 5px;
+  padding-right: 16px;
 }
 
 .activity-item-profile-image {
@@ -204,6 +194,7 @@
 .activity-item-footer {
   background-color: #eaf0f2;
   border-top: 1px solid #dce3e6;
+  border-radius: 0 0 8px 8px;
   bottom: 0;
   display: none;
   height: 48px;
@@ -251,9 +242,10 @@
 .activity-item {
   &.is-expanded {
     border-top: none;
-    margin: 15px 0;
+    margin: 15px;
     padding-bottom: 50px;
-    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.19), 0 1px 6px rgba(0, 0, 0, 0.12);
+    border-radius: 8px;
+    box-shadow: 10px 10px 35px 0 rgba(0, 0, 0, 0.08);
 
     .activity-item-content {
       padding-top: 10px;
@@ -284,9 +276,13 @@
       color: #696e6f;
       font-weight: 500;
       left: 0;
-      margin: 10px 5px;
+      margin: 10px 20px 0;
       position: absolute;
       top: -44px;
+    }
+
+    &.is-expanded .activity-item-label {
+      left: -15px;
     }
   }
 
@@ -381,9 +377,13 @@
 
 .activity-log-list {
   display: inline-block;
+  border-radius: 8px;
+  box-shadow: 10px 10px 35px 0 rgba(0, 0, 0, 0.08);
+  background-color: #fff;
   width: 100%;
   font-size: 13px;
   line-height: 24px;
+  margin-top: 24px;
 
   .activity-log-list-empty-message {
     font-size: 16px;
@@ -430,7 +430,7 @@
   height: 24px;
   width: 24px;
   background: #696e6f;
-  border-radius: 12px;
+  border-radius: 8px;
   border: 2px solid #fff;
 
   span {
