--- a/src/scss/components/entity_activity/summary.scss
+++ b/src/scss/components/entity_activity/summary.scss
@@ -5,14 +5,14 @@
 }
 
 .activity-summary-summary-items {
-  box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0.12), 0 1px 6px rgba(0, 0, 0, 0.12);
+  border-radius: 8px;
+  box-shadow: 10px 10px 35px 0 rgba(0, 0, 0, 0.08);
   background-color: #fff;
   display: flex;
   flex-flow: row nowrap;
 }
 
 .activity-summary-summary-item {
-  background-color: #fff;
   flex: 1 1 0;
   height: 70px;
   line-height: 35px;
