--- a/src/scss/layout/admin/dashboard/layout.scss
+++ b/src/scss/layout/admin/dashboard/layout.scss
@@ -111,7 +111,7 @@
 }
 
 @media (max-width: 767.98px) {
-  .dashboard-cards .card {
+  .dashboard-cards .card:not(.row-0):not(.row-1) {
     height: auto;
     min-height: 350px;
 
@@ -122,12 +122,18 @@
 }
 
 @media (min-width: 992px) {
+  .col-lg-2,
   .col-lg-4,
   .col-lg-6,
   .col-lg-8,
   .col-lg-12 {
     margin-left: 10px;
     margin-right: 10px;
+  }
+
+  .col-lg-2 {
+    width: -webkit-calc(20% - 20px);
+    width: calc(20% - 20px);
   }
 
   .col-lg-4 {
@@ -151,6 +157,7 @@
   }
 }
 
+.row-0,
 .row-1,
 .row-2,
 .row-3,
@@ -170,6 +177,9 @@
   margin-bottom: 20px;
 }
 
+.row-0 {
+  height: 100px;
+}
 .row-1 {
   height: 150px;
 }
